--- a/frosthaven_item_crafter.html
+++ b/frosthaven_item_crafter.html
@@ -46,7 +46,6 @@
       display: flex;
       flex-wrap: wrap;
       gap: 35px;
-      margin-left: var(--sidebar-width);
       padding: 0 0 0 5px;
     }
     .flex_row{
@@ -71,6 +70,10 @@
       overflow-y: auto;
       padding: 0 5px;
     }
+    main {
+      margin-left: var(--sidebar-width);
+      padding: 0 8px;
+    }
     .header{
       display: flex;
       flex-direction: row;
@@ -80,7 +83,6 @@
       z-index: 1;
       font-size: xx-large;
       padding: 0 0 30px 0;
-      margin-left: var(--sidebar-width);
       margin-bottom: 10px;
     }
     input, select, button{
@@ -92,7 +94,6 @@
       font-size: 30px;
       width: 100%;
     }
-
     select{
       border-radius: 100vmax;
       font-size: 30px;
@@ -320,7 +321,7 @@
     </div>
   </div>
 
-  <div>
+  <main>
     <div class="header">
       <div>
         <select onchange="parse_input()"
@@ -350,7 +351,7 @@
 
     <div id="card_display" class="card_display">
     </div>
-  </div>
+  </main>
 
   <script src="frosthaven_item_crafter.js"></script>
 </body>
