--- a/frosthaven_item_crafter.html
+++ b/frosthaven_item_crafter.html
@@ -55,7 +55,7 @@
     }
     body{
       background: #112;
-      font-family: sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
       color: #fff;
       margin: 0;
       padding: 0;
