--- a/frosthaven_item_crafter.html
+++ b/frosthaven_item_crafter.html
@@ -41,11 +41,12 @@
       background-color: #506aff;
       width: fit-content;
     }
-    .card_display{
+    .card_display {
       display: flex;
       flex-wrap: wrap;
-      gap: 35px;
-      padding: 0 0 0 5px;
+      justify-content: center;
+      gap: 44px;
+      padding: 10px 30px 20px 20px;
     }
     .flex_row{
       display: flex;
@@ -75,14 +76,14 @@
     }
     .header{
       display: flex;
-      flex-direction: row;
-      background-color: #112;
+      background: #112c;
+      backdrop-filter: blur(4px);
+      justify-content: center;
+      gap: 20px;
       top: 0;
       position: sticky;
       z-index: 1;
-      font-size: xx-large;
-      padding: 0 0 30px 0;
-      margin-bottom: 10px;
+      padding: 20px;
     }
     input, select, button{
       background-color: #112;
