Normalize input and button borders

--- a/frosthaven_item_crafter.html
+++ b/frosthaven_item_crafter.html
@@ -87,7 +87,7 @@
     }
     input, select, button{
       background-color: #112;
-      border-color: #76758B;
+      border: 1px solid #76758B;
       color: white;
     }
     .items input{
