Move all external resources into an assets folder

--- a/frosthaven_item_crafter.html
+++ b/frosthaven_item_crafter.html
@@ -42,7 +42,7 @@
       height: 48px;
       padding-left: 6px;
       color: #000;
-      background: url('./icons/r-item.png');
+      background: url('./assets/r-item.png');
       top: 8%;
     }
     .card_display {
@@ -273,7 +273,7 @@
       <div class="resources">
         <div>
           <label>
-            <img src="./icons/r-gold.png" alt="Gold" class="icon">
+            <img src="./assets/r-gold.png" alt="Gold" class="icon">
             <input type="number"
               style="width: 125px;"
               onblur="parse_input()"
@@ -285,7 +285,7 @@
 
         <div>
           <label>
-            <img src="./icons/r-wood.png" alt="Wood" class="icon">
+            <img src="./assets/r-wood.png" alt="Wood" class="icon">
             <input type="number"
               min="0"
               onblur="parse_input()"
@@ -293,7 +293,7 @@
               id="wood">
           </label>
           <label>
-            <img src="./icons/r-metal.png" alt="Metal" class="icon">
+            <img src="./assets/r-metal.png" alt="Metal" class="icon">
             <input type="number"
               min="0"
               onblur="parse_input()"
@@ -301,7 +301,7 @@
               id="metal">
           </label>
           <label>
-            <img src="./icons/r-hide.png" alt="Hide" class="icon">
+            <img src="./assets/r-hide.png" alt="Hide" class="icon">
             <input type="number"
               min="0"
               onblur="parse_input()"
@@ -312,7 +312,7 @@
 
         <div>
           <label>
-            <img src="./icons/r-arrowvine.png" alt="Arrowvine" class="icon">
+            <img src="./assets/r-arrowvine.png" alt="Arrowvine" class="icon">
             <input type="number"
               min="0"
               onblur="parse_input()"
@@ -320,7 +320,7 @@
               id="arrowvine">
           </label>
           <label>
-            <img src="./icons/r-axenut.png" alt="Axenut" class="icon">
+            <img src="./assets/r-axenut.png" alt="Axenut" class="icon">
             <input type="number"
               min="0"
               onblur="parse_input()"
@@ -328,7 +328,7 @@
               id="axenut">
           </label>
           <label>
-            <img src="./icons/r-corpsecap.png" alt="Corpsecap" class="icon">
+            <img src="./assets/r-corpsecap.png" alt="Corpsecap" class="icon">
             <input type="number"
               min="0"
               onblur="parse_input()"
@@ -339,7 +339,7 @@
 
         <div>
           <label>
-            <img src="./icons/r-flamefruit.png" alt="Flamefruit" class="icon">
+            <img src="./assets/r-flamefruit.png" alt="Flamefruit" class="icon">
             <input type="number"
               min="0"
               onblur="parse_input()"
@@ -347,7 +347,7 @@
               id="flamefruit">
           </label>
           <label>
-            <img src="./icons/r-rockroot.png" alt="Rockroot" class="icon">
+            <img src="./assets/r-rockroot.png" alt="Rockroot" class="icon">
             <input type="number"
               min="0"
               onblur="parse_input()"
@@ -355,7 +355,7 @@
               id="rockroot">
           </label>
           <label>
-            <img src="./icons/r-snowthistle.png" alt="Snowthistle" class="icon">
+            <img src="./assets/r-snowthistle.png" alt="Snowthistle" class="icon">
             <input type="number"
               min="0"
               onblur="parse_input()"
