Move only inline style into header style element

--- a/frosthaven_item_crafter.html
+++ b/frosthaven_item_crafter.html
@@ -58,6 +58,9 @@
       justify-content: space-between;
       margin: 12px 0;
     }
+    #gold {
+      width: 100px;
+    }
     body{
       background: #112;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -278,7 +281,6 @@
           <label>
             <img src="./assets/r-gold.png" alt="Gold" class="icon">
             <input type="number"
-              style="width: 125px;"
               onblur="parse_input()"
               min="0"
               name="gold"
