Slight adjustment to back card clipping and remove shadow from back cards

--- a/frosthaven_item_crafter.html
+++ b/frosthaven_item_crafter.html
@@ -27,7 +27,7 @@
       height: var(--card-height);
       width: auto;
     }
-    .card_front, .card_back {
+    .card_front {
       box-shadow: 2px 0 4px #00000080;
     }
     .card_back{
@@ -35,7 +35,7 @@
       z-index: -1;
       top: 4px;
       left: 7%;
-      clip-path: inset(0 0 6% 75%);
+      clip-path: inset(0 0 10% 75%);
       transform: rotate(7deg);
     }
     .card_number{
