Change filter wording to unlocked items instead of unlocked only

--- a/frosthaven_item_crafter.html
+++ b/frosthaven_item_crafter.html
@@ -415,7 +415,7 @@
         <select onchange="parse_input()"
           name="locked_input"
           id="locked_input">
-          <option value="unlock"      >Unlocked Only           </option>
+          <option value="unlock"      >Unlocked Items          </option>
           <option value="unlock_craft">Unlocked &amp; Craftable</option>
           <option value="owned"       >Owned Items             </option>
           <option value="all"         >All Items               </option>
