--- a/frosthaven_item_crafter.html
+++ b/frosthaven_item_crafter.html
@@ -46,10 +46,20 @@
       width: 100%;
       gap: 2px;
     }
-    .card_overlay button {
+    .card_overlay .menu_button {
       width: 100%;
       font-size: 22px;
       border-radius: 100vmax;
+    }
+    .card_div .flip_button {
+      position: absolute;
+      bottom: 10px;
+      right: 26px;
+      border-radius: 100vmax;
+    }
+    .card_div .flip_button > img{
+      width: 48px;
+      height: 48px;
     }
     .card_div.locked .hide_when_locked,
     .card_div:not(.locked) .hide_when_unlocked,
@@ -57,7 +67,8 @@
     .card_div:not(.craftable) .hide_when_not_craftable {
       display: none;
     }
-    .card_div:hover .card_overlay {
+    .card_div:hover .card_overlay,
+    .card_div.show_overlay .card_overlay {
       display: inline-flex;
     }
     .card_div .card_name span:not(.card_number) {
@@ -107,7 +118,7 @@
     }
     body{
       background: #112;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: system-ui;
       color: #fff;
       margin: 0;
       padding: 0;
@@ -290,8 +301,18 @@
         height: 24px;
         padding-left: 3px;
       }
-      .card_overlay button {
+      .card_overlay .menu_button {
         font-size: 16px;
+      }
+      .card_div .flip_button {
+        position: absolute;
+        bottom: 8px;
+        right: 12px;
+        border-radius: 100vmax;
+      }
+      .card_div .flip_button > img{
+        width:  24px;
+        height: 24px;
       }
     }
     @media screen and (max-width: 374px) {
